--- a/package.json
+++ b/package.json
@@ -1,31 +1,30 @@
 {
-  "name": "js-advanced-functions-first-class-functions-lab",
+  "name": "js-async-promises-lab",
   "version": "0.2.0",
-  "description": "First-Class Functions Lab for Learn.co",
+  "description": "JS Async Promises Lab for Learn.co",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/learn-co-curriculum/js-advanced-functions-first-class-functions-lab.git"
+    "url": "git+ssh://git@github.com/learn-co-curriculum/js-async-promises-lab.git"
   },
   "scripts": {
-   "postinstall": "gem install learn-co",
-   "test": "node_modules/browser-sync/bin/browser-sync.js start --config node_modules/learn-browser/bs-config.js"
- },
+    "postinstall": "gem install learn-co",
+    "test": "node_modules/browser-sync/bin/browser-sync.js start --config node_modules/learn-browser/bs-config.js"
+  },
   "keywords": [
     "learn",
     "flatiron school",
     "javascript",
-    "functions",
-    "functional",
-    "first-class",
-    "code-along"
+    "async",
+    "promises",
+    "lab"
   ],
-  "author": "@gj",
+  "author": "flatiron school",
   "license": "SEE LICENSE IN LICENSE.md",
   "bugs": {
-    "url": "https://github.com/learn-co-curriculum/js-advanced-functions-first-class-functions-lab/issues"
+    "url": "https://github.com/learn-co-curriculum/js-async-promises-lab/issues"
   },
-  "homepage": "https://github.com/learn-co-curriculum/js-advanced-functions-first-class-functions-lab#readme",
+  "homepage": "https://github.com/learn-co-curriculum/js-async-promises-lab#readme",
   "devDependencies": {
     "learn-browser": "^0.1.13"
   }
